<resources>
    <string name="app_name">Lab1</string>
    <string name="add_btn_txt">+</string>
    <string name="dif_btn_txt">-</string>
    <string name="mul_btn_txt">*</string>
    <string name="div_btn_txt">/</string>
    <string name="clear_btn_txt">Clear</string>
    <string name="zero_division_error">cannot divide by 0</string>
    <string name="login_str">Login</string>
    <string name="password_str">Password</string>
    <string name="sign_up_str">Sign up</string>
    <string name="email_str">Email</string>
    <string name="name_str">Name</string>
    <string name="age_str">Age</string>
    <string name="back_str">Back</string>
    <string name="log_out_str">Log out</string>
</resources>
