<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/inputFirst"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/inputSecond"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <Button android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_btn_txt"/>

        <Button android:id="@+id/difBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dif_btn_txt"/>

        <Button android:id="@+id/mulBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mul_btn_txt"/>

        <Button android:id="@+id/divBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div_btn_txt"/>
    </LinearLayout>

    <Button android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_btn_txt"/>
</LinearLayout>